[tool.poetry]
name = "advanced-rag"
version = "0.1.0"
description = ""
authors = ["goda <godaharuto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "0.3.15"
langchain-openai = "0.2.6"
langchain-community = "0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
