[tool.poetry]
name = "advanced-rag"
version = "0.1.0"
description = ""
authors = ["goda <godaharuto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "0.3.15"
langchain-openai = "0.2.6"
langchain-community = "0.3.5"
langchain = "0.3.7"
six = "^1.16.0"
gitpython = "^3.1.43"
faiss-cpu = "^1.9.0"
langchain-text-splitters = "^0.3.2"
rank-bm25 = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
